--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   url_launcher: ^6.3.2
   share_plus: ^12.0.1
   path_provider: ^2.1.0
+  shared_preferences: ^2.3.4
 
 
 dev_dependencies:
