--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   url_launcher: ^6.3.2
   share_plus: ^12.0.1
   path_provider: ^2.1.0
+  path: ^1.9.0
 
 
 dev_dependencies:
@@ -36,6 +37,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.7.1
   freezed: ^3.2.3
+  drift_dev: ^2.29.0
 
 flutter:
   uses-material-design: true
