--- a/assets/tutorials/02_intro_basics.yaml
+++ b/assets/tutorials/02_intro_basics.yaml
@@ -17,11 +17,11 @@ steps:
   # Message de bienvenue
   - command: SHOW_MESSAGE
     params:
-      text: "Bienvenue dans Pentapol ! Ce tutoriel vous apprendra les bases du jeu."
+      text: "Bienvenue dans Pentapol !"
 
   - command: WAIT
     params:
-      duration: 3000
+      duration: 2000
 
   # Présentation du slider
   - command: SHOW_MESSAGE
@@ -35,15 +35,15 @@ steps:
   # Highlight première pièce
   - command: SCROLL_SLIDER_TO_PIECE
     params:
-      pieceNumber: 5
+      pieceNumber: 6
 
   - command: HIGHLIGHT_PIECE_IN_SLIDER
     params:
-      pieceNumber: 5
+      pieceNumber: 6
 
   - command: SHOW_MESSAGE
     params:
-      text: "Sélectionnons la pièce n°5 (le T)."
+      text: "Sélectionnons la pièce n°6"
 
   - command: WAIT
     params:
@@ -52,7 +52,7 @@ steps:
   # Sélection de la pièce
   - command: SELECT_PIECE_FROM_SLIDER
     params:
-      pieceNumber: 4
+      pieceNumber: 6
 
   - command: CLEAR_SLIDER_HIGHLIGHT
 
@@ -89,16 +89,16 @@ steps:
 
   - command: SHOW_MESSAGE
     params:
-      text: "Parfait ! La pièce est maintenant placée sur le plateau."
+      text: "Parfait ! La pièce   sur le plateau."
 
   - command: WAIT
     params:
-      duration: 2500
+      duration: 3500
 
   # Démonstration rotation
   - command: SHOW_MESSAGE
     params:
-      text: "Maintenant, voyons comment faire pivoter une pièce."
+      text: "Rotation"
 
   - command: WAIT
     params:
@@ -106,8 +106,8 @@ steps:
 
   - command: SELECT_PIECE_ON_BOARD_AT
     params:
-      x: 3
-      y: 5
+      x: 2
+      y: 4
 
   - command: SHOW_MESSAGE
     params:
@@ -120,7 +120,7 @@ steps:
   # Rotation
   - command: ROTATE_AROUND_MASTER
     params:
-      pieceNumber: 4
+      pieceNumber: 6
       quarterTurns: 1
       duration: 800
 
@@ -131,7 +131,7 @@ steps:
   # Encore une rotation
   - command: ROTATE_AROUND_MASTER
     params:
-      pieceNumber: 5
+      pieceNumber: 6
       quarterTurns: 1
       duration: 800
 
