--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   share_plus: ^12.0.1
   path_provider: ^2.1.0
   path: ^1.9.0
+  yaml: ^3.1.3
 
 
 dev_dependencies:
@@ -44,3 +45,4 @@ flutter:
 
   assets:
     - assets/data/solutions_6x10_normalisees.bin
+    - assets/tutorials/
