--- a/assets/tutorials/03_Rotation_basics.yaml
+++ b/assets/tutorials/03_Rotation_basics.yaml
@@ -1,7 +1,7 @@
 # Tutorial d'introduction aux bases de Pentapol
 
 id: intro_basics
-name: "Introduction - Les bases"
+name: "Rotation"
 description: "les rotations"
 difficulty: beginner
 estimatedDuration: 120
@@ -17,7 +17,7 @@ steps:
   # Message de bienvenue
   - command: SHOW_MESSAGE
     params:
-      text: "Bienvenue dans Pentapol !"
+      text: "les rotations !"
 
   - command: WAIT
     params:
@@ -26,7 +26,7 @@ steps:
   # Présentation du slider
   - command: SHOW_MESSAGE
     params:
-      text: "Voici le slider de pièces. Il contient les 12 pentominos disponibles."
+      text: "Voici le slider de pièces. Il contient  12 pentominos"
 
   - command: WAIT
     params:
@@ -89,7 +89,7 @@ steps:
 
   - command: SHOW_MESSAGE
     params:
-      text: "Parfait ! La pièce   sur le plateau."
+      text: "Parfait ! La pièce est sur le plateau."
 
   - command: WAIT
     params:
@@ -117,29 +117,51 @@ steps:
     params:
       duration: 2000
 
-  # Rotation
+
+  - command: SHOW_MESSAGE
+    params:
+      text: "🔄 Regarde cette icône qui clignote !"
+      duration: 2.5
+
+  - command: highlight_isometry_icon
+    params:
+        icon: rotation
+  - command: WAIT
+    params:
+        duration: 1000
+  - command: WAIT
+    params:
+        duration: 3.0
+  # Rotation 1
   - command: ROTATE_AROUND_MASTER
     params:
       pieceNumber: 6
       quarterTurns: 1
+      direction: cw
       duration: 800
-  # Encore une rotation
+
+  # Rotation 2
   - command: ROTATE_AROUND_MASTER
     params:
       pieceNumber: 6
       quarterTurns: 1
+      direction: cw
       duration: 800
-  # Rotation
+
+  # Rotation 3
   - command: ROTATE_AROUND_MASTER
     params:
       pieceNumber: 6
       quarterTurns: 1
+      direction: cw
       duration: 800
-  # Encore une rotation
+
+  # Rotation 4
   - command: ROTATE_AROUND_MASTER
     params:
       pieceNumber: 6
       quarterTurns: 1
+      direction: cw
       duration: 800
 
   - command: SHOW_MESSAGE
@@ -150,13 +172,33 @@ steps:
     params:
       duration: 3000
 
+  # Rotation 4
+  - command: ROTATE_AROUND_MASTER
+    params:
+      pieceNumber: 6
+      quarterTurns: 1
+      direction: ccw
+      duration: 800
+
+
+  #Rotation 4
+  - command: ROTATE_AROUND_MASTER
+    params:
+      pieceNumber: 6
+      quarterTurns: 1
+      direction: ccw
+      duration: 800
+
+
+
+
   # Fin
   - command: CLEAR_MESSAGE
 
   - command: SHOW_MESSAGE
     params:
       text: "Félicitations ! Vous maîtrisez les bases de Pentapol. 🎉"
-      autoHideAfter: 3000
+
   - command: WAIT
     params:
       duration: 3000
