--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   path: ^1.9.0
   yaml: ^3.1.3
   web_socket_channel: ^2.4.0
-
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
