--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
   build_runner: ^2.7.1
   freezed: ^3.2.3
   drift_dev: ^2.29.0
+  flutter_launcher_icons: ^0.14.1
 
 flutter:
   uses-material-design: true
